// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigationBarComponent renders 1`] = `
<mock-render>
  <app-navigation-bar
    ng-reflect-layout="row"
  >
    <mat-toolbar
      color="primary"
      ng-reflect-color="primary"
    >
      <span
        class="mat-toolbar-filler"
      />
    </mat-toolbar>
  </app-navigation-bar>
</mock-render>
`;

exports[`NavigationBarComponent with items renders 1`] = `
<mock-render>
  <app-navigation-bar
    ng-reflect-items="[object Object],[object Object"
    ng-reflect-layout="row"
  >
    <mat-toolbar
      color="primary"
      ng-reflect-color="primary"
    >
      <span
        class="mat-toolbar-filler"
      />
      <nav
        class="mat-nav-list"
      >
        <a
          mat-button=""
          ng-reflect-message="label1"
          ng-reflect-position="below"
          ng-reflect-router-link="route1"
          ng-reflect-router-link-active="active"
          routerlinkactive="active"
          style="min-width: auto;"
        >
          <i
            class="material-icons transition-transform active-scale"
          >
            icon icon1
          </i>
        </a>
        <a
          mat-button=""
          ng-reflect-message="label2"
          ng-reflect-position="below"
          ng-reflect-router-link="route2"
          ng-reflect-router-link-active="active"
          routerlinkactive="active"
          style="min-width: auto;"
        >
          <i
            class="material-icons transition-transform active-scale"
          >
            icon icon2
          </i>
        </a>
        <a
          mat-button=""
          ng-reflect-message="label3"
          ng-reflect-position="below"
          ng-reflect-router-link="route3"
          ng-reflect-router-link-active="active"
          routerlinkactive="active"
          style="min-width: auto;"
        >
          <i
            class="material-icons transition-transform active-scale"
          >
            icon icon3
          </i>
        </a>
      </nav>
      <span
        class="mat-toolbar-filler"
      />
    </mat-toolbar>
  </app-navigation-bar>
</mock-render>
`;

exports[`NavigationBarComponent with items with layout column renders 1`] = `
<mock-render>
  <app-navigation-bar
    ng-reflect-items="[object Object],[object Object"
    ng-reflect-layout="column"
  >
    <mat-toolbar
      class="toolbar-column"
      color="primary"
      ng-reflect-color="primary"
    >
      <nav
        class="mat-nav-list"
      >
        <a
          mat-button=""
          ng-reflect-message="label1"
          ng-reflect-position="right"
          ng-reflect-router-link="route1"
          ng-reflect-router-link-active="active"
          routerlinkactive="active"
          style="min-width: auto;"
        >
          <i
            class="material-icons transition-transform active-scale"
          >
            icon icon1
          </i>
        </a>
        <a
          mat-button=""
          ng-reflect-message="label2"
          ng-reflect-position="right"
          ng-reflect-router-link="route2"
          ng-reflect-router-link-active="active"
          routerlinkactive="active"
          style="min-width: auto;"
        >
          <i
            class="material-icons transition-transform active-scale"
          >
            icon icon2
          </i>
        </a>
        <a
          mat-button=""
          ng-reflect-message="label3"
          ng-reflect-position="right"
          ng-reflect-router-link="route3"
          ng-reflect-router-link-active="active"
          routerlinkactive="active"
          style="min-width: auto;"
        >
          <i
            class="material-icons transition-transform active-scale"
          >
            icon icon3
          </i>
        </a>
      </nav>
      <span
        class="mat-toolbar-filler"
      />
    </mat-toolbar>
  </app-navigation-bar>
</mock-render>
`;
